security_group.tf
resource "azurerm_network_security_group" "security_group" {
  name = "coco-security-group"
  location = azurerm_resource_group.region.location
  resource_group_name = azurerm_resource_group.region.name
}

resource "azurerm_network_security_rule" "allow_http" {
  name = "allow_http"
  priority = 100
  direction = "Inbound"
  access = "Allow"
  protocol = "Tcp"
  source_port_range = "*"
  destination_port_range = "80"
  source_address_prefix = "*"
  destination_address_prefix = "*"
  resource_group_name = azurerm_resource_group.region.name
  network_security_group_name = azurerm_network_security_group.security_group.name
}

resource "azurerm_network_security_rule" "allow_https" {
  name = "allow_https"
  priority = 110
  direction = "Inbound"
  access = "Allow"
  protocol = "Tcp"
  source_port_range = "*"
  destination_port_range = "443"
  source_address_prefix = "*"
  destination_address_prefix = "*"
  resource_group_name = azurerm_resource_group.region.name
  network_security_group_name = azurerm_network_security_group.security_group.name
}

resource "azurerm_network_security_rule" "allow_ssh" {
  name = "allow_ssh"
  priority = 120
  direction = "Inbound"
  access = "Allow"
  protocol = "Tcp"
  source_port_range = "*"
  destination_port_range = "22"
  source_address_prefix = "*"
  destination_address_prefix = "*"
  resource_group_name = azurerm_resource_group.region.name
  network_security_group_name = azurerm_network_security_group.security_group.name
}

resource "azurerm_network_security_rule" "allow_tcp_range" {
  name = "allow_tcp_range"
  priority = 130
  direction = "Inbound"
  access = "Allow"
  protocol = "Tcp"
  source_port_range = "*"
  destination_port_range = "32768-61000"
  source_address_prefix = "*"
  destination_address_prefix = "*"
  resource_group_name = azurerm_resource_group.region.name
  network_security_group_name = azurerm_network_security_group.security_group.name
}

resource "azurerm_network_security_rule" "allow_udp_range" {
  name = "allow_udp_range"
  priority = 140
  direction = "Inbound"
  access = "Allow"
  protocol = "Udp"
  source_port_range = "*"
  destination_port_range = "32768-61000"
  source_address_prefix = "*"
  destination_address_prefix = "*"
  resource_group_name = azurerm_resource_group.region.name
  network_security_group_name = azurerm_network_security_group.security_group.name
}

resource "azurerm_network_security_rule" "allow_icmp" {
  name = "allow_icmp"
  priority = 150
  direction = "Inbound"
  access = "Allow"
  protocol = "Icmp"
  source_port_range = "*"
  destination_port_range = "*"
  source_address_prefix = "*"
  destination_address_prefix = "*"
  resource_group_name = azurerm_resource_group.region.name
  network_security_group_name = azurerm_network_security_group.security_group.name
}

resource "azurerm_network_security_rule" "deny_all" {
  name = "deny_all"
  priority = 4096
  direction = "Inbound"
  access = "Deny"
  protocol = "*"
  source_port_range = "*"
  destination_port_range = "*"
  source_address_prefix = "*"
  destination_address_prefix = "*"
  resource_group_name = azurerm_resource_group.region.name
  network_security_group_name = azurerm_network_security_group.security_group.name
}
